--- a/templates/index.html
+++ b/templates/index.html
@@ -7,64 +7,17 @@
 <body onload="initDoc();" class="mt-5">    
     <form
         name="compForm"
-        method="post"
-        action="sample.php"
-        onsubmit="if(validateMode()){this.myDoc.value=oDoc.innerHTML;return true;}return false;"
+        method="POST"
+        action=""
         >
-        <input type="hidden" name="myDoc" />
+        <input type="hidden" name="myDoc" id="myDoc"/>
 
         <div class="mt-3">
 
             <div class="row mx-3 shadow-sm">
                 <div class="col-sm-8 border">
-                    <div class="row">
-                        <div class="col-sm-12 d-flex">
-                            <select
-                                class="form-control"
-                                onchange="formatDoc('formatblock',this[this.selectedIndex].value);this.selectedIndex=0;">
-                                <option selected>- formatting -</option>
-                                <option value="h1">Title 1 &lt;h1&gt;</option>
-                                <option value="h2">Title 2 &lt;h2&gt;</option>
-                                <option value="h3">Title 3 &lt;h3&gt;</option>
-                                <option value="h4">Title 4 &lt;h4&gt;</option>
-                                <option value="h5">Title 5 &lt;h5&gt;</option>
-                                <option value="h6">Subtitle &lt;h6&gt;</option>
-                                <option value="p">Paragraph &lt;p&gt;</option>
-                                <option value="pre">Preformatted &lt;pre&gt;</option>
-                            </select>
-                            <select
-                                class="form-control"
-                                onchange="formatDoc('fontname',this[this.selectedIndex].value);this.selectedIndex=0;">
-                                <option class="heading" selected>- font -</option>
-                                <option>Arial</option>
-                                <option>Arial Black</option>
-                                <option>Courier New</option>
-                                <option>Times New Roman</option>
-                            </select>                            
-                            <select
-                                class="form-control"
-                                onchange="formatDoc('fontsize',this[this.selectedIndex].value);this.selectedIndex=0;">
-                                <option class="heading" selected>- size -</option>
-                                <option value="1">Very small</option>
-                                <option value="2">A bit small</option>
-                                <option value="3">Normal</option>
-                                <option value="4">Medium-large</option>
-                                <option value="5">Big</option>
-                                <option value="6">Very big</option>
-                                <option value="7">Maximum</option>
-                            </select>
-                            <select
-                                class="form-control"
-                                onchange="formatDoc('forecolor',this[this.selectedIndex].value);this.selectedIndex=0;">
-                                <option class="heading" selected>- color -</option>
-                                <option value="red">Red</option>
-                                <option value="blue">Blue</option>
-                                <option value="green">Green</option>
-                            <option value="black">Black</option>
-                            </select>
-                        </div>
-                    </div>                    
-                    <div class="row mt-3">
+                                       
+                    <div class="row my-3">
                         <div class="col-sm-12 d-flex" id="toolbar2">
                             <!-- <div id="toolBar1">
                                 <select
@@ -211,22 +164,76 @@
                                 <p><input type="button" value="Show Bold Text" onclick="showBold()"></p> -->                   
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="col-sm-12 d-flex">
+                            <select
+                                class="form-control"
+                                onchange="formatDoc('formatblock',this[this.selectedIndex].value);this.selectedIndex=0;">
+                                <option selected>- formatting -</option>
+                                <option value="h1">Title 1 &lt;h1&gt;</option>
+                                <option value="h2">Title 2 &lt;h2&gt;</option>
+                                <option value="h3">Title 3 &lt;h3&gt;</option>
+                                <option value="h4">Title 4 &lt;h4&gt;</option>
+                                <option value="h5">Title 5 &lt;h5&gt;</option>
+                                <option value="h6">Subtitle &lt;h6&gt;</option>
+                                <option value="p">Paragraph &lt;p&gt;</option>
+                                <option value="pre">Preformatted &lt;pre&gt;</option>
+                            </select>
+                            <select
+                                class="form-control"
+                                onchange="formatDoc('fontname',this[this.selectedIndex].value);this.selectedIndex=0;">
+                                <option class="heading" selected>- font -</option>
+                                <option>Arial</option>
+                                <option>Arial Black</option>
+                                <option>Courier New</option>
+                                <option>Times New Roman</option>
+                            </select>                            
+                            <select
+                                class="form-control"
+                                onchange="formatDoc('fontsize',this[this.selectedIndex].value);this.selectedIndex=0;">
+                                <option class="heading" selected>- size -</option>
+                                <option value="1">Very small</option>
+                                <option value="2">A bit small</option>
+                                <option value="3">Normal</option>
+                                <option value="4">Medium-large</option>
+                                <option value="5">Big</option>
+                                <option value="6">Very big</option>
+                                <option value="7">Maximum</option>
+                            </select>
+                            <select
+                                class="form-control"
+                                onchange="formatDoc('forecolor',this[this.selectedIndex].value);this.selectedIndex=0;">
+                                <option class="heading" selected>- color -</option>
+                                <option value="red">Red</option>
+                                <option value="blue">Blue</option>
+                                <option value="green">Green</option>
+                            <option value="black">Black</option>
+                            </select>
+                        </div>
+                    </div> 
                     <div class="row mt-4">
-                        <div class="col-sm-12 border p-3" id="textBox" contenteditable="true">
-                           <p>Lorem ipsum</p>
+                        <div class="col-sm-12 border p-3" id="textBox" contenteditable="true">                          
+                           <p>
+                            {{ content }}
+                           </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="row">
-                        <div class="col-sm-12 border" id="results">
-                           <p>Results</p>
+                        <div class="col-sm-12 border" >
+                            <input type="button" value="SEARCH" name="submit" class="form-control btn btn-success" id="submit">
+                           <!-- <p id="results">Results</p> -->
+                           <iframe src="results" frameborder="0"></iframe>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </form>
+    <script src="{{url_for('static', filename='jquery.js')}}"></script>
+    <script src="{{url_for('static', filename='scripts.js')}}" type="text/javascript"></script>
+
 </body>
 
 {% endblock %}
