Started extracting required elements from the paragraph like headings, bold, italic, underline text fields.

--- a/templates/index.html
+++ b/templates/index.html
@@ -192,13 +192,13 @@
                                 class="form-control"
                                 onchange="formatDoc('fontsize',this[this.selectedIndex].value);this.selectedIndex=0;">
                                 <option class="heading" selected>- size -</option>
-                                <option value="1">Very small</option>
-                                <option value="2">A bit small</option>
-                                <option value="3">Normal</option>
-                                <option value="4">Medium-large</option>
-                                <option value="5">Big</option>
-                                <option value="6">Very big</option>
-                                <option value="7">Maximum</option>
+                                <option value="1">8</option>
+                                <option value="2">10</option>
+                                <option value="3">12</option>
+                                <option value="4">14</option>
+                                <option value="5">16</option>
+                                <option value="6">20</option>
+                                <option value="7">24</option>
                             </select>
                             <select
                                 class="form-control"
