--- a/templates/index.html
+++ b/templates/index.html
@@ -214,7 +214,6 @@
                     <div class="row mt-4">
                         <div class="col-sm-12 border p-3" id="textBox" contenteditable="true">                          
                            <p>
-                            {{ content }}
                            </p>
                         </div>
                     </div>
@@ -222,14 +221,18 @@
                 <div class="col-sm-4">
                     <div class="row">
                         <div class="col-sm-12 border" >
-                            <input type="button" value="SEARCH" name="submit" class="form-control btn btn-success" id="submit">
+                            <input type="button" value="SEARCH" 
+                            name="submit" class="form-control btn btn-success" 
+                            id="submit"
+                            >
                            <!-- <p id="results">Results</p> -->
-                           <iframe src="results" frameborder="0"></iframe>
+                           <iframe src="results" frameborder="0" id="frame"></iframe>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <div id="res"></div>
     </form>
     <script src="{{url_for('static', filename='jquery.js')}}"></script>
     <script src="{{url_for('static', filename='scripts.js')}}" type="text/javascript"></script>
