--- a/templates/results.html
+++ b/templates/results.html
@@ -10,6 +10,7 @@
                 <img src="{{file}}" alt="No image" style="width:120px; height:120px">            
             {% endfor %}
         {% endfor %}
+        <!-- {{value}} -->
     </div>
 
 {% endblock %}
