--- a/templates/index.html
+++ b/templates/index.html
@@ -222,10 +222,10 @@
                     <div class="row">
                         <div class="col-sm-12 border" >
                             <input type="button" value="SEARCH" 
-                            name="submit" class="form-control btn btn-success" 
-                            id="submit"
+                                name="submit" class="form-control btn btn-success" 
+                                id="submit"
+                                onmousedown="document.getElementById('frame').src='loading';"
                             >
-                           <!-- <p id="results">Results</p> -->
                            <iframe src="results" frameborder="0" id="frame"></iframe>
                         </div>
                     </div>
