--- a/templates/loading.html
+++ b/templates/loading.html
@@ -3,7 +3,7 @@
 
     <div class="px-2">
     <center>
-        <img src="{{url_for('static', filename='loading.gif')}}" alt="No image available">
+        <img src="{{url_for('static', filename='loading.gif')}}" alt="No image available" style="width: 300px;height:170px">
         <hr/>
         <h4 align="center">Searching for results...</h4>
     </center>
