Performance improvements, considered nouns in a para

--- a/templates/index.html
+++ b/templates/index.html
@@ -212,10 +212,7 @@
                         </div>
                     </div> 
                     <div class="row mt-4">
-                        <div class="col-sm-12 border p-3" id="textBox" contenteditable="true">                          
-                           <p>
-                           </p>
-                        </div>
+                        <div class="col-sm-12 border p-3" id="textBox" contenteditable="true"></div>
                     </div>
                 </div>
                 <div class="col-sm-4">
