--- a/templates/results.html
+++ b/templates/results.html
@@ -4,10 +4,16 @@
     <div class="px-2">
         <h2 align="center">Results</h2>
         <hr/>
+        {% set i = [1] %}
         {% for files in data %}
-            <img src="{{files}}" 
-            alt="No image" 
-            style="width:120px; height:120px">
+            {% if i.append(i.pop() + 1) %}{% endif %}
+                    
+                <img src="{{files}}" 
+                alt="No image" 
+                style="width:120px; height:120px">
+            {% if i[0]%num == 0 %}
+                <br><hr style="height:2px; width:100vw; background-color: grey;"/>
+            {% endif %}
         {% endfor %}
         <div id="res"></div>
     </div>
